objects/tfn_Funding_Project__c.object
<CustomObject>
    <fields>
        <fullName>tfn_Funding_Project_Import_ID__c</fullName>
        <externalId>true</externalId>
        <label>Funding Project Import ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Project_Funding_Source_Desc__c</fullName>
        <label>Project Funding Source Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Project_Funding_Source__c</fullName>
        <inlineHelpText>The status of vegetation quality at the time of assessment</inlineHelpText>
        <label>Project Funding Source</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_T1_Exported_Date__c</fullName>
        <label>T1 Exported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tfn_T1_Project_ID__c</fullName>
        <label>T1 Project ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Funding Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>